--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -162,7 +162,7 @@ header ul a
 {
     color:white;
 
-    font-size : 0.875rem;
+    font-size : 18px;
     
     text-decoration : none;
     text-transform  : uppercase;
