--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -152,6 +152,8 @@ header ul
     padding : 0px;
     margin  : 0px;
 
+    font-size   : 18px;
+
     display   : flex;
     flex-wrap : wrap;
     
