--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -192,6 +192,11 @@ header ul a li
     padding-right : 8px;
 }
 
+.show
+{
+    display: block;
+}
+
 @media only screen and (max-width: 768px) 
 {
     .page_header_area
