--- a/scss/page/rules.scss
+++ b/scss/page/rules.scss
@@ -1,8 +1,19 @@
 // Rules
 @media only screen and (max-width: 768px)
 {
+    /*
+        ONLY - Rules
+    */
     .hide_on_mobile
     {
         display: none !important;
+    }
+
+    /*
+        ONLY - Rules
+    */
+    .show_on_mobile
+    {
+        display: block !important;
     }
 }
