--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -204,4 +204,13 @@ header ul a li
         display: none;
     }
 
+    .mobile_page_navigation_area
+    {
+
+    }
+
+    .mobile_page_navigation_area ul
+    {
+
+    }
 }
