--- a/scss/page/rules.scss
+++ b/scss/page/rules.scss
@@ -12,7 +12,7 @@
 
 @media only screen and (min-width: 769px)
 {
-    .show_on_mobile
+    .hide_on_desktop
     {
         display: none !important;
     }
