--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -213,4 +213,14 @@ header ul a li
     {
 
     }
+
+    .mobile_page_navigation_area ul a
+    {
+
+    }
+
+    .mobile_page_navigation_area ul a li
+    {
+
+    }
 }
