--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -206,7 +206,7 @@ header ul a li
 
     .mobile_page_navigation_area
     {
-
+        background-color: black;
     }
 
     .mobile_page_navigation_area ul
