--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -211,7 +211,8 @@ header ul a li
 
     .mobile_page_navigation_area ul
     {
-
+        padding: 0px;
+        margin: 0px;
     }
 
     .mobile_page_navigation_area ul a
