--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -217,6 +217,8 @@ header ul a li
 
     .mobile_page_navigation_area ul a
     {
+        padding: 0px;
+        margin: 0px;
         width: 100%;
     }
 
