--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -219,12 +219,14 @@ header ul a li
     {
         padding: 0px;
         margin: 0px;
+
         width: 100%;
     }
 
     .mobile_page_navigation_area ul a li
     {
-        
+        width: 100%;
+        text-align: center;
 
     }
 }
