--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -229,4 +229,10 @@ header ul a li
         text-align: center;
 
     }
+
+    .selected_page
+    {
+        border: 0px solid rgba(255, 255, 255, 0.0);
+        color: white;
+    }
 }
