--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -234,5 +234,6 @@ header ul a li
     {
         border: 0px solid rgba(255, 255, 255, 0.0);
         color: white;
+        background-color: #D63031;
     }
 }
