--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -233,7 +233,7 @@ header ul a li
     .selected_page
     {
         border: 0px solid rgba(255, 255, 255, 0.0);
-        color: white;
+        color: white !important;
         background-color: #D63031;
     }
 }
