--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -236,4 +236,9 @@ header ul a li
         color: white !important;
         background-color: #D63031;
     }
+
+    .selected_page:hover 
+    {
+        color: white !important;
+    }
 }
