--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -220,6 +220,9 @@ header ul a li
         padding: 0px;
         margin: 0px;
 
+        margin-top: 16px;
+        margin-bottom: 16px;
+        
         width: 100%;
     }
 
