--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -220,9 +220,9 @@ header ul a li
         padding: 0px;
         margin: 0px;
 
-        margin-top: 16px;
-        margin-bottom: 16px;
-        
+        padding-top: 8px;
+        padding-bottom: 8px;
+
         width: 100%;
     }
 
