--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -212,6 +212,7 @@ header ul a li
     .mobile_page_navigation_area
     {
         background-color: black;
+        overflow: hidden
     }
 
     .mobile_page_navigation_area ul
@@ -243,6 +244,7 @@ header ul a li
         border: 0px solid rgba(255, 255, 255, 0.0);
         color: white !important;
         background-color: #D63031;
+        
     }
 
     .selected_page:hover 
