--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -34,6 +34,18 @@
     
 }
 
+//
+.news-container-front
+{
+
+}
+
+.news-container-area
+{
+    grid-area: auto;
+
+}
+
 .container-short-description p 
 {
     text-align: center;
