--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -245,7 +245,7 @@ header ul a li
         border: 0px solid rgba(255, 255, 255, 0.0);
         color: white !important;
         background-color: #D63031;
-        
+        box-shadow: inset 0px 0px 16px black;
     }
 
     .selected_page:hover 
