--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -251,5 +251,6 @@ header ul a li
     .selected_page:hover 
     {
         color: white !important;
+        box-shadow: inset 0px 0px 16px rgba(0, 0, 0, 0.8);
     }
 }
