--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -250,6 +250,7 @@ header ul a li
 
     .selected_page:hover 
     {
+        border:0px;
         color: white !important;
         box-shadow: inset 0px 0px 16px rgba(0, 0, 0, 0.6);
     }
