--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -242,7 +242,7 @@ header ul a li
 
     .selected_page
     {
-        border: 0px solid rgba(255, 255, 255, 0.0);
+        border: 0px;
         color: white !important;
         background-color: #D63031;
         box-shadow: inset 0px 0px 16px rgba(0, 0, 0, 0.2);
