--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -233,6 +233,12 @@ header ul a li
         width: 100%;
     }
 
+    .mobile_page_navigation_area ul a:hover
+    {
+        border:0px;
+        color: white !important;
+    }
+
     .mobile_page_navigation_area ul a li
     {
         width: 100%;
