--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -213,7 +213,8 @@ header ul a li
     .mobile_page_navigation_area
     {
         background-color: black;
-        overflow: hidden
+        overflow: hidden;
+        display: none;
     }
 
     .mobile_page_navigation_area ul
