--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -166,7 +166,7 @@ header ul
     justify-content : center;
 }
 
-header ul a 
+header ul a
 {
     color:white;
 
@@ -185,12 +185,12 @@ header ul a
     margin-left  : 64px;
 }
 
-header ul a:hover 
+header ul a:hover
 {
     color: #D63031 !important;
 }
 
-header ul a li 
+header ul a li
 {
     display: block;
 
@@ -201,6 +201,11 @@ header ul a li
 .show
 {
     display: block;
+}
+
+.menu_button
+{
+    
 }
 
 @media only screen and (max-width: 768px) 
