--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -205,7 +205,14 @@ header ul a li
 
 .menu_button
 {
-    
+    z-index: 4;
+    position: fixed;
+
+    top: 20px;
+    left: 20px;
+
+    width: 50px;
+    height: 50px;
 }
 
 @media only screen and (max-width: 768px) 
