--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -213,6 +213,19 @@ header ul a li
 
     width: 50px;
     height: 50px;
+
+    background-color: white;
+    border: 1px solid gray;
+}
+
+.menu_button_icon
+{
+    
+}
+
+.menu_button_icon i
+{
+
 }
 
 @media only screen and (max-width: 768px) 
