--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -225,7 +225,8 @@ header ul a li
 
 .menu_button_icon i
 {
-
+    width: 45px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 768px) 
