--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -226,8 +226,10 @@ header ul a li
 .menu_button_icon i
 {
     width: 100%;
+
     font-size: 45px;
     text-align: center;
+    margin-top: 4px;
 }
 
 @media only screen and (max-width: 768px) 
