--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -216,6 +216,8 @@ header ul a li
 
     background-color: white;
     border: 1px solid gray;
+    
+    border-radius: 100%;
 }
 
 .menu_button_icon
