--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -221,16 +221,21 @@ header ul a li
 
 .menu_button_icon
 {
-    
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .menu_button_icon i
 {
-    width: 100%;
-
     font-size: 35px;
-    text-align: center;
-    margin-top: 5.5px;
+    margin: 0px;
+    padding: 0px;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media only screen and (max-width: 768px) 
