--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -228,7 +228,7 @@ header ul a li
 
 .menu_button_icon i
 {
-    color: gray;
+    color: #D63031;
     font-size: 30px;
     margin: 0px;
     padding: 0px;
