--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -214,6 +214,7 @@ header ul a li
     width: 50px;
     height: 50px;
 
+    border: 2px solid #D63031;
     background-color: white;
 
     border-radius: 100%;
