--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -220,6 +220,8 @@ header ul a li
     border-radius: 100%;
 }
 
+/* Ide kun */
+
 .menu_button:hover 
 {
     border: 2px solid white;
@@ -230,6 +232,8 @@ header ul a li
 {
     color: white;
 }
+
+/* */
 
 .menu_button_icon
 {
