--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -217,6 +217,7 @@ header ul a li
     border: 2px solid #D63031;
     background-color: white;
 
+    box-shadow: 0px 0px 16px black;
     border-radius: 100%;
 }
 
