--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -268,7 +268,8 @@ header ul a li
         background-color: black;
 
         overflow: hidden;
-        
+        position: fixed;
+        width: 100%;
     }
 
     .mobile_page_navigation_area ul
