--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -265,6 +265,7 @@ header ul a li
 
     .mobile_page_navigation_area
     {
+        z-index: 4;
         background-color: black;
 
         overflow: hidden;
