--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -265,11 +265,14 @@ header ul a li
 
     .mobile_page_navigation_area
     {
+        display: none;
+     
         z-index: 4;
         background-color: black;
 
         overflow: hidden;
         position: fixed;
+
         width: 100%;
     }
 
