--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -267,7 +267,7 @@ header ul a li
 
     .mobile_page_navigation_area
     {
-        
+        display: none;
      
         z-index: 4;
         background-color: black;
