--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -5,6 +5,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
 
+    grid-template-areas: 'container_area_dynamic container_area_dynamic container_area_dynamic';
+
     grid-gap: 16px;
 }
 
@@ -12,7 +14,7 @@
 {
     @extend %no-margin-or-padding;
 
-    grid-area: auto;
+    grid-area: container_area_dynamic;
 }
 
 .cover-container
@@ -182,6 +184,10 @@
     {
         grid-template-columns : auto;
         grid-template-rows    : auto auto auto;
+
+        grid-template-areas: 'container_area_dynamic'
+                             'container_area_dynamic'
+                             'container_area_dynamic';
     }
 
     .cooperation_with ul 
@@ -197,6 +203,10 @@
     {
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
+
+        grid-template-areas: 'container_area_dynamic container_area_dynamic';
+        grid-template-areas: 'container_area_dynamic container_area_dynamic';
+
     }
   }
 
