--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -5,8 +5,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
 
-    grid-template-areas: 'container_area_dynamic container_area_dynamic container_area_dynamic';
-
     grid-gap: 16px;
 }
 
@@ -184,10 +182,6 @@
     {
         grid-template-columns : auto;
         grid-template-rows    : auto auto auto;
-
-        grid-template-areas: 'container_area_dynamic'
-                             'container_area_dynamic'
-                             'container_area_dynamic';
     }
 
     .cooperation_with ul 
@@ -201,7 +195,9 @@
   {
     .container-area-3
     {
-        
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+
 
     }
   }
