--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -193,6 +193,11 @@
 
   @media only screen and (max-width:1024px)
   {
+    .double-container
+    {
+        grid-area: auto auto !important;
+    }
+
     .container-area-3
     {
         grid-template-columns: auto auto;
