--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -195,7 +195,7 @@
   {
     .double-container
     {
-        grid-area: auto auto !important;
+        grid-area: auto auto;
     }
 
     .container-area-3
