--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -5,6 +5,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
 
+    grid-template-areas: 'container_area container_area container_area';
+
     grid-gap: 16px;
 }
 
@@ -12,7 +14,7 @@
 {
     @extend %no-margin-or-padding;
 
-    grid-area: auto;
+    grid-area: container_area;
 }
 
 .cover-container
@@ -195,7 +197,7 @@
   {
     .double-container
     {
-        grid-area: auto auto;
+        grid-area: double_containment;
     }
 
     .container-area-3
@@ -203,6 +205,7 @@
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
 
+        grid-template: '';
 
     }
   }
