--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -5,8 +5,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
 
-    grid-template-areas: 'container_area container_area container_area';
-
     grid-gap: 16px;
 }
 
@@ -14,7 +12,7 @@
 {
     @extend %no-margin-or-padding;
 
-    grid-area: container_area;
+    grid-area: auto;
 }
 
 .cover-container
@@ -205,7 +203,7 @@
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
 
-        grid-template: '';
+        
 
     }
   }
