--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -196,7 +196,7 @@
     .double-container
     {
         grid-area: auto;
-        grid-column: 1/2;
+        grid-column: auto auto;
     }
 
     .container-area-3
