--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -196,7 +196,7 @@
     .double-container
     {
         grid-area: auto;
-        grid-column: auto auto;
+    grid-template-columns: repeat(1, auto);
     }
 
     .container-area-3
