--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -200,7 +200,7 @@
 
     .container-area-3
     {
-        grid-template-columns: auto auto;
+        grid-template-columns: minmax(1fr, auto);
         grid-template-rows: minmax(1fr, auto);
     }
   }
