--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -195,7 +195,8 @@
   {
     .double-container
     {
-        grid-area: auto auto;
+        grid-area: auto;
+        grid-auto-columns: auto;
     }
 
     .container-area-3
