--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -196,7 +196,7 @@
     .double-container
     {
         grid-area: auto;
-        grid-auto-columns: auto auto;
+        grid-auto-columns: span 2;
     }
 
     .container-area-3
