--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -193,6 +193,7 @@
 
   @media only screen and (max-width:1024px)
   {
+      /* 
     .double-container
     {
         grid-area: auto;
@@ -204,6 +205,7 @@
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
     }
+    */
   }
 
   @media only screen and (min-width: 769px)
