--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -2,9 +2,6 @@
 {
     display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-
     grid-gap: 16px;
 }
 
@@ -206,6 +203,15 @@
         grid-template-rows: auto auto;
     }
     */
+  }
+
+  @media only screen and (min-width: 1025px)
+  {
+      .container-area-3
+      {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+      }
   }
 
   @media only screen and (min-width: 769px)
