--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -188,7 +188,7 @@
     }
   }
 
-  @media only screen and (max-width:1024px)
+  @media only screen and (min-width:769px)
   {
       /* 
     .double-container
