--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -195,8 +195,8 @@
   {
     .container-area-3
     {
-        grid-auto-columns: auto auto;
-        grid-row: auto auto;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
     }
 
   }
