--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -184,6 +184,11 @@
         grid-template-rows    : auto auto auto;
     }
 
+    .container-area
+    {
+        grid-column: span 2;
+    }
+
     .cooperation_with ul 
     {
         grid-template-columns : auto;
@@ -198,6 +203,8 @@
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
     }
+
+    
 
   }
 
