--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -13,6 +13,7 @@
     @extend %no-margin-or-padding;
 
     grid-area: auto;
+    grid-row-end: span 2;
 }
 
 .cover-container
@@ -184,11 +185,6 @@
         grid-template-rows    : auto auto auto;
     }
 
-    .container-area
-    {
-        grid-column: span 2;
-    }
-
     .cooperation_with ul 
     {
         grid-template-columns : auto;
@@ -203,9 +199,6 @@
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
     }
-
-    
-
   }
 
   @media only screen and (min-width: 769px)
