--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -3,7 +3,7 @@
     display: grid;
 
     grid-template-rows : auto;
-    grid-template-columns    : auto auto auto;
+    grid-template-columns : auto auto auto;
 
     grid-gap: 16px;
 }
@@ -196,7 +196,7 @@
     .container-area-3
     {
         grid-template-columns: auto auto;
-        grid-template-rows: auto auto;
+        grid-template-rows: span 2;
     }
   }
 
