--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -189,6 +189,11 @@
         grid-template-columns : auto;
         grid-template-rows    : auto auto auto auto auto;
     }
+
+    .double-container
+    {
+        grid-column: 1;
+    }
   }
 
   @media only screen and (max-width: 1024px)
@@ -196,7 +201,12 @@
     .container-area-3
     {
         grid-template-columns: auto auto;
-        grid-template-rows: span 2;
+        grid-template-rows: auto auto;
+    }
+
+    .double-container
+    {
+        grid-column: span 2;
     }
   }
 
