--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -181,7 +181,7 @@
     .container-area-3
     {
         grid-template-columns : auto;
-        grid-template-rows    : auto auto auto;
+        grid-template-rows    : auto auto auto !important;
     }
 
     .cooperation_with ul 
