--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -1,123 +1,3 @@
-/* Old
-header
-{
-    position : relative;
-}
-
-.overlay
-{
-    background-color : $document_header_color;
-
-    box-shadow : 0px 0px
-                 16px
-                 rgba( 0, 0, 0, 
-                         0.2 );
-
-}
-
-header ul
-{
-    
-    @extend %no-margin-or-padding;
-
-    font-family : $header-font;
-    font-size   : 18px;
-
-    display : flex;
-
-    flex-wrap : wrap;
-
-    list-style : none;
-
-    justify-content: center;
-
-    text-transform : uppercase;
-}
-
-header ul a
-{
-    @extend %rest;
-
-    font-size: 0.875rem;
-    
-    margin-top    : 8px;
-    margin-bottom : 8px;
-
-    margin-right : 64px;
-    margin-left  : 64px;
-
-    border-bottom: $selected_bottom_border solid rgba( 0, 0, 0, 0.0 );
-}
-
-header ul a:hover
-{
-    @extend %activate;
-
-}
-
-header ul a li
-{
-    display: block;
-
-}
-
-.selected
-{
-    color  : #D63031 !important;
-    border-bottom: $selected_bottom_border solid #D63031;
-
-    padding-left  : 8px;
-    padding-right : 8px;
-}
-
-.selected:hover
-{
-    border-radius: 0px;
-    
-}
-
-// Rules Only. 
-@media only screen and (max-width: 768px) 
-{
-    header 
-    {
-     
-        background-color : $document_header_color;
-        
-        padding:0px;
-        margin: 0px;
-    }
-
-    /* For mobile phones: */
-    /* 
-    header ul a
-    {
-        width: 100%;
-        margin: 0px;
-
-        text-align: center;
-        
-        padding-top: 8px;
-        padding-bottom: 8px;
-    }
-
-    .selected
-    {
-        border: 0px;
-
-        color: white !important;
-        background-color: #D63031;
-        
-        border-radius: 0px;
-    }
-
-    .selected:hover 
-    {
-        color: white !important;
-    }
-}
-*/
-
 .page_navigation_area
 {
     display: none;
@@ -136,6 +16,12 @@ header ul a li
 }
 
 .page_header_area
+{
+    
+}
+
+
+.open 
 {
     
 }
