--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -164,7 +164,8 @@ header ul a li
         overflow: hidden;
         position: fixed;
 
-        width: 100%;
+        width: 80%;
+        left:0px;
     }
 
     .mobile_page_navigation_area ul
