--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -165,7 +165,7 @@ header ul a li
         position: fixed;
 
         width: 80%;
-        left:0px;
+        right:0px;
     }
 
     .mobile_page_navigation_area ul
