--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -164,7 +164,7 @@ header ul a li
         overflow: hidden;
         position: fixed;
 
-        width: 88%;
+        width: calc(100% - 200px);
         height: 100%;
         right: 0px;
     }
