--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -159,7 +159,7 @@ header ul a li
     .mobile_page_navigation_area
     {
         z-index: 4;
-        background-color: black;
+        background-color: white;
 
         overflow: hidden;
         position: fixed;
