--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -183,7 +183,7 @@ header ul a li
         padding-top: 8px;
         padding-bottom: 8px;
 
-        color:black;
+        color:black !important;
 
         width: 100%;
     }
