--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -159,7 +159,7 @@ header ul a li
     .mobile_page_navigation_area
     {
         z-index: 4;
-        background-color: white;
+        background-color: black;
 
         overflow: hidden;
         position: fixed;
@@ -182,8 +182,6 @@ header ul a li
 
         padding-top: 8px;
         padding-bottom: 8px;
-
-        color:black !important;
 
         width: 100%;
     }
