--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -167,6 +167,8 @@ header ul a li
         width: calc(100% - 95px);
         height: 100%;
         right: 0px;
+
+        box-shadow: -6px 0px 16px black;
     }
 
     .mobile_page_navigation_area ul
