--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -168,7 +168,7 @@ header ul a li
         height: 100%;
         right: 0px;
 
-        box-shadow: -6px 0px 16px black;
+        box-shadow: -6px 0px 16px rgba(0, 0, 0, 0.2);
     }
 
     .mobile_page_navigation_area ul
