--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -159,16 +159,20 @@ header ul a li
     .mobile_page_navigation_area
     {
         z-index: 4;
+
         background-color: black;
 
-        overflow: hidden;
-        position: fixed;
+        overflow : hidden;
+        position : fixed;
 
         width: calc(100% - 95px);
         height: 100%;
         right: 0px;
 
-        box-shadow: -6px 0px 16px rgba(0, 0, 0, 0.2);
+        box-shadow: -6px 0px 
+                    16px 
+                    rgba( 0, 0, 0, 
+                            0.2 );
     }
 
     .mobile_page_navigation_area ul
