--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -23,7 +23,6 @@
     
 }
 
-
 .open
 {
     left: 20px;
@@ -163,7 +162,7 @@ header ul a li
 
 .menu_button_icon i
 {
-    color: #D63031;
+    color: gray;
 
     font-size: 30px;
 
